@@ -199,7 +199,8 @@ class ServerFactory extends EventEmitter {
     // Connect to the database and, if successful, define
     // callbacks for the server.
     var mongourl = options.get('mongourl');
-    MongoClient.connect(mongourl, options.get('mongoopt'), function(err, db) {
+    MongoClient.connect(mongourl, options.get('mongoopt'), function(err, client) {
+      var db = client.db();
       assert.equal(err, null, `Failed to connect to ${mongourl}: ${err}`);
       LOGGER.info(`Connected to ${mongourl}`);
 
@@ -218,14 +219,14 @@ class ServerFactory extends EventEmitter {
       server.on('close', () => {
         LOGGER.info("\nServer closing");
         self.emit(SERVER_CLOSED, server);
-        dbClose(db);
+        dbClose(client);
       });
 
       // Exit gracefully on error, close the database
       // connection and remove the socket file.
       process.on('uncaughtException', (err) => {
         LOGGER.error(`Caught exception: ${err}\n`);
-        dbClose(db);
+        dbClose(client);
         let code = 1;
         process.nextTick(function() {
           LOGGER.info(`Exiting with code ${code}`);
