@@ -88,9 +88,9 @@ describe('Data info retrieval', function() {
     });
 
     it('Do not allow mismatching references when multiref falsy', function(done) {
-      MongoClient.connect(url, function(err, db) {
+      MongoClient.connect(url, function(err, client) {
         assert.equal(err, null);
-        var dm = new DataMapper(db);
+        var dm = new DataMapper(client.db());
         dm.once('data', () => {
           fail();
           done();
@@ -104,9 +104,9 @@ describe('Data info retrieval', function() {
     });
 
     it('Fail if no reference found', function(done) {
-      MongoClient.connect(url, function(err, db) {
+      MongoClient.connect(url, function(err, client) {
         assert.equal(err, null);
-        var dm = new DataMapper(db);
+        var dm = new DataMapper(client.db());
         dm.once('data', () => {
           fail();
           done();
@@ -122,9 +122,9 @@ describe('Data info retrieval', function() {
 
   describe('Test filters', function() {
     it('invalid combination', function(done) {
-      MongoClient.connect(url, function(err, db) {
+      MongoClient.connect(url, function(err, client) {
         assert.equal(err, null);
-        let dm = new DataMapper(db);
+        let dm = new DataMapper(client.db());
         dm.once('nodata', (reason) => {
           // Expect failure because both target and target_not are specified,
           // which is not allowed
@@ -140,9 +140,9 @@ describe('Data info retrieval', function() {
     });
 
     it('all defaults', function(done) {
-      MongoClient.connect(url, function(err, db) {
+      MongoClient.connect(url, function(err, client) {
         assert.equal(err, null);
-        let dm = new DataMapper(db);
+        let dm = new DataMapper(client.db());
         dm.once('nodata', (reason) => {
           fail(reason);
           done();
@@ -159,9 +159,9 @@ describe('Data info retrieval', function() {
     });
 
     it('target=0', function(done) {
-      MongoClient.connect(url, function(err, db) {
+      MongoClient.connect(url, function(err, client) {
         assert.equal(err, null);
-        let dm = new DataMapper(db);
+        let dm = new DataMapper(client.db());
         dm.once('nodata', (reason) => {
           fail(reason);
           done();
@@ -183,9 +183,9 @@ describe('Data info retrieval', function() {
     });
 
     it('target=', function(done) {
-      MongoClient.connect(url, function(err, db) {
+      MongoClient.connect(url, function(err, client) {
         assert.equal(err, null);
-        let dm = new DataMapper(db);
+        let dm = new DataMapper(client.db());
         dm.once('nodata', (reason) => {
           fail(reason);
           done();
@@ -215,9 +215,9 @@ describe('Data info retrieval', function() {
     });
 
     it('target=undef', function(done) {
-      MongoClient.connect(url, function(err, db) {
+      MongoClient.connect(url, function(err, client) {
         assert.equal(err, null);
-        let dm = new DataMapper(db);
+        let dm = new DataMapper(client.db());
         dm.once('nodata', (reason) => {
           fail(reason);
           done();
@@ -235,9 +235,9 @@ describe('Data info retrieval', function() {
     });
 
     it('target_not=1', function(done) {
-      MongoClient.connect(url, function(err, db) {
+      MongoClient.connect(url, function(err, client) {
         assert.equal(err, null);
-        let dm = new DataMapper(db);
+        let dm = new DataMapper(client.db());
         dm.once('nodata', (reason) => {
           fail(reason);
           done();
@@ -263,9 +263,9 @@ describe('Data info retrieval', function() {
     });
 
     it('target_not=undef', function(done) {
-      MongoClient.connect(url, function(err, db) {
+      MongoClient.connect(url, function(err, client) {
         assert.equal(err, null);
-        let dm = new DataMapper(db);
+        let dm = new DataMapper(client.db());
         dm.once('nodata', (reason) => {
           fail(reason);
           done();
@@ -291,9 +291,9 @@ describe('Data info retrieval', function() {
     });
 
     it('target_not=', function(done) {
-      MongoClient.connect(url, function(err, db) {
+      MongoClient.connect(url, function(err, client) {
         assert.equal(err, null);
-        let dm = new DataMapper(db);
+        let dm = new DataMapper(client.db());
         dm.once('nodata', (reason) => {
           fail(reason);
           done();
@@ -323,9 +323,9 @@ describe('Data info retrieval', function() {
     });
 
     it('alignment_filter=1', function(done) {
-      MongoClient.connect(url, function(err, db) {
+      MongoClient.connect(url, function(err, client) {
         assert.equal(err, null);
-        let dm = new DataMapper(db);
+        let dm = new DataMapper(client.db());
         dm.once('nodata', (reason) => {
           // Expect no data because nothing has alignment_filter=1
           expect(reason).toBe('No files for sample accession JKL987654');
@@ -340,9 +340,9 @@ describe('Data info retrieval', function() {
     });
 
     it('alignment_filter=phix', function(done) {
-      MongoClient.connect(url, function(err, db) {
+      MongoClient.connect(url, function(err, client) {
         assert.equal(err, null);
-        let dm = new DataMapper(db);
+        let dm = new DataMapper(client.db());
         dm.once('nodata', (reason) => {
           // Expect no data because only file with alignment_filter=phix
           // also has target=1, which must be explicitly defined
@@ -358,9 +358,9 @@ describe('Data info retrieval', function() {
     });
 
     it('target=0, alignment_filter=phix', function(done) {
-      MongoClient.connect(url, function(err, db) {
+      MongoClient.connect(url, function(err, client) {
         assert.equal(err, null);
-        let dm = new DataMapper(db);
+        let dm = new DataMapper(client.db());
         dm.once('nodata', (reason) => {
           fail(reason);
           done();
@@ -378,9 +378,9 @@ describe('Data info retrieval', function() {
     });
 
     it('target=0, alignment_filter_not=phix', function(done) {
-      MongoClient.connect(url, function(err, db) {
+      MongoClient.connect(url, function(err, client) {
         assert.equal(err, null);
-        let dm = new DataMapper(db);
+        let dm = new DataMapper(client.db());
         dm.once('nodata', (reason) => {
           fail(reason);
           done();
@@ -398,9 +398,9 @@ describe('Data info retrieval', function() {
     });
 
     it('target=0, alignment_filter=', function(done) {
-      MongoClient.connect(url, function(err, db) {
+      MongoClient.connect(url, function(err, client) {
         assert.equal(err, null);
-        let dm = new DataMapper(db);
+        let dm = new DataMapper(client.db());
         dm.once('nodata', (reason) => {
           fail(reason);
           done();
@@ -444,9 +444,9 @@ describe('Data info retrieval', function() {
   });
 
   it('No data received - unknown accession number given', function(done) {
-    MongoClient.connect(url, function(err, db) {
+    MongoClient.connect(url, function(err, client) {
       assert.equal(err, null);
-      var dm = new DataMapper(db);
+      var dm = new DataMapper(client.db());
       dm.on('nodata', (reason) => {
         expect(reason).toBe('No files for sample accession KRT1234');
         dm.removeAllListeners();
@@ -457,9 +457,9 @@ describe('Data info retrieval', function() {
   });
 
   it('No data received - unknown file name', function(done) {
-    MongoClient.connect(url, function(err, db) {
+    MongoClient.connect(url, function(err, client) {
       assert.equal(err, null);
-      var dm = new DataMapper(db);
+      var dm = new DataMapper(client.db());
       dm.on('nodata', (reason) => {
         expect(reason).toBe('No files for 1234_2.bam');
         done();
@@ -469,9 +469,9 @@ describe('Data info retrieval', function() {
   });
 
   it('Filtering on flags - some data left', function(done) {
-    MongoClient.connect(url, function(err, db) {
+    MongoClient.connect(url, function(err, client) {
       assert.equal(err, null);
-      var dm = new DataMapper(db);
+      var dm = new DataMapper(client.db());
       dm.on('data', (data) => {
         expect(data).toEqual(
           [{file: 'irods:/seq/10000/10000_2#22.bam', accessGroup: '2574',
@@ -483,9 +483,9 @@ describe('Data info retrieval', function() {
   });
 
   it('No Filtering on flags when querying by name', function(done) {
-    MongoClient.connect(url, function(err, db) {
+    MongoClient.connect(url, function(err, client) {
       assert.equal(err, null);
-      var dm = new DataMapper(db);
+      var dm = new DataMapper(client.db());
       dm.on('data', (data) => {
         expect(data).toEqual(
           [{file: 'irods:/seq/10000/10000_1#63.bam', accessGroup: '2136',
@@ -497,9 +497,9 @@ describe('Data info retrieval', function() {
   });
 
   it('Query by name', function(done) {
-    MongoClient.connect(url, function(err, db) {
+    MongoClient.connect(url, function(err, client) {
       assert.equal(err, null);
-      var dm = new DataMapper(db);
+      var dm = new DataMapper(client.db());
       dm.on('data', (data) => {
         expect(data).toEqual(
           [{file: 'irods:/seq/10000/10000_2#22.bam', accessGroup: '2574',
@@ -511,9 +511,9 @@ describe('Data info retrieval', function() {
   });
 
   it('No data received - unknown directory', function(done) {
-    MongoClient.connect(url, function(err, db) {
+    MongoClient.connect(url, function(err, client) {
       assert.equal(err, null);
-      var dm = new DataMapper(db);
+      var dm = new DataMapper(client.db());
       dm.on('nodata', (reason) => {
         expect(reason).toBe('No files for 10000_2#22.bam in /tmp/files');
         done();
@@ -523,9 +523,9 @@ describe('Data info retrieval', function() {
   });
 
   it('Query by name and directory', function(done) {
-    MongoClient.connect(url, function(err, db) {
+    MongoClient.connect(url, function(err, client) {
       assert.equal(err, null);
-      var dm = new DataMapper(db);
+      var dm = new DataMapper(client.db());
       dm.on('data', (data) => {
         expect(data).toEqual([{
           file: 'irods:/seq/10000/10000_2#22.bam', accessGroup: '2574',
@@ -538,9 +538,9 @@ describe('Data info retrieval', function() {
   });
 
   it('Query by name, localisation by host', function(done) {
-    MongoClient.connect(url, function(err, db) {
+    MongoClient.connect(url, function(err, client) {
       assert.equal(err, null);
-      var dm = new DataMapper(db);
+      var dm = new DataMapper(client.db());
       dm.on('data', (data) => {
         expect(data).toEqual(
           [{ file: '/irods-seq-i10-bc/seq/10000/10000_2#22.bam', accessGroup: '2574',
@@ -552,9 +552,9 @@ describe('Data info retrieval', function() {
   });
 
   it('Query by accession number, multiple results', function(done) {
-    MongoClient.connect(url, function(err, db) {
+    MongoClient.connect(url, function(err, client) {
       assert.equal(err, null);
-      var dm = new DataMapper(db);
+      var dm = new DataMapper(client.db());
       dm.on('data', (data) => {
         let d = [
           {
@@ -579,9 +579,9 @@ describe('Data info retrieval', function() {
   });
 
   it('Query by accession number, multiple results, localisation by host', function(done) {
-    MongoClient.connect(url, function(err, db) {
+    MongoClient.connect(url, function(err, client) {
       assert.equal(err, null);
-      var dm = new DataMapper(db);
+      var dm = new DataMapper(client.db());
       dm.on('data', (data) => {
         let d = [
           {file: '/irods-seq-sr04-ddn-gc10-30-31-32/seq/10000/10000_4#43.bam', accessGroup: '2586', reference: '/Homo_sapiens/1000Genomes_hs37d5/all/fasta/hs37d5.fa'},
@@ -598,9 +598,9 @@ describe('Data info retrieval', function() {
   });
 
   it('Some files are local, some not', function(done) {
-    MongoClient.connect(url, function(err, db) {
+    MongoClient.connect(url, function(err, client) {
       assert.equal(err, null);
-      var dm = new DataMapper(db);
+      var dm = new DataMapper(client.db());
       dm.on('data', (data) => {
         let d = [
           {file: 'irods:/seq/10000/10000_4#43.bam', accessGroup: '2586',
@@ -620,9 +620,9 @@ describe('Data info retrieval', function() {
   });
 
   it('Filtering out empty paths, no results remaining', function(done) {
-    MongoClient.connect(url, function(err, db) {
+    MongoClient.connect(url, function(err, client) {
       assert.equal(err, null);
-      var dm = new DataMapper(db);
+      var dm = new DataMapper(client.db());
       dm.on('nodata', (reason) => {
         expect(reason).toBe('No files for 10000_8#97.bam');
         done();
